--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hasmter-kombat-today",
+  "name": "todox",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/request": "^2.48.12",
+    "cn-func": "^1.0.1",
+    "jalaali-react-date-picker": "^1.0.18",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-multi-date-picker": "^4.5.2",
+    "react-otp-input": "^3.1.1",
+    "request": "^2.88.2",
+    "zaman": "^2.1.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.10",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
