--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.9.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/request": "^2.48.12",
+    "axios": "^1.7.3",
     "cn-func": "^1.0.1",
     "jalaali-react-date-picker": "^1.0.18",
     "jsonwebtoken": "^9.0.2",
@@ -18,10 +21,12 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.4.1",
     "react-multi-date-picker": "^4.5.2",
     "react-otp-input": "^3.1.1",
+    "react-type-animation": "^3.2.0",
     "request": "^2.88.2",
-    "zaman": "^2.1.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
