refresh token server & optimized main page

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb://localhost:27017/todo
+MONGODB_URL=mongodb://localhost:27017/todox
 WEB_SERVICE_USERNAME=u09399963288
 WEB_SERVICE_PASS=Faraz@1419224210440701
 PATTERN_CODE=60gmdfxaxn0t80k
