--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "rc-picker": "^4.6.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
@@ -23,6 +24,9 @@
     "react-jwt": "^1.2.2",
     "react-multi-date-picker": "^4.5.2",
     "react-otp-input": "^3.1.1",
+    "react-time-picker": "^7.0.0",
+    "sweetalert2": "^11.12.4",
+    "sweetalert2-react-content": "^5.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
