--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGODB_URL=mongodb://localhost:27017/todox
+# MONGODB_URL=mongodb://localhost:27017/todox
+MONGODB_URL=mongodb://root:wbC8SMME9aa5LEsREStxieVN@todox-db:27017/my-app?authSource=admin
 WEB_SERVICE_USERNAME=u09399963288
 WEB_SERVICE_PASS=Faraz@1419224210440701
 PATTERN_CODE=60gmdfxaxn0t80k
