--- a/.env
+++ b/.env
@@ -1,7 +1,14 @@
-# MONGODB_URL=mongodb://localhost:27017/todox
-MONGODB_URL=mongodb://root:wbC8SMME9aa5LEsREStxieVN@todox-db:27017/my-app?authSource=admin
+MONGODB_URL=mongodb://localhost:27017/todox
+# MONGODB_URL=mongodb://root:0XtEF1GJJket5gEHTZxp5cOr@todox-db:27017/my-app?authSource=admin
 WEB_SERVICE_USERNAME=u09399963288
 WEB_SERVICE_PASS=Faraz@1419224210440701
 PATTERN_CODE=60gmdfxaxn0t80k
+
 ACCESS_SECRET_KEY=dGvy4030@*6843FCWEDFCGRWgyibggFohunHohi
 REFRESH_SECRET_KEY=UIGIGfpi8vGPIipfygVIFPIpFYIGIgiF864D6*@D
+TEMPORARY_SECRET_KEY=YGYIby88yib-ubUBOb-12uhoho9*!Fu-a
+
+LIARA_ENDPOINT=https://storage.c2.liara.space/avatars
+LIARA_BUCKET_NAME=todox
+LIARA_ACCESS_KEY=0p1abhs7009rkl54
+LIARA_SECRET_KEY=1ff2ca85-594f-499c-bf2a-5fb785afde29
