--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@types/request": "^2.48.12",
+    "aws-sdk": "^2.1682.0",
     "axios": "^1.7.3",
     "cn-func": "^1.0.1",
+    "framer-motion": "^11.3.30",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
@@ -25,6 +28,7 @@
     "react-multi-date-picker": "^4.5.2",
     "react-otp-input": "^3.1.1",
     "react-time-picker": "^7.0.0",
+    "request": "^2.88.2",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
     "zod": "^3.23.8",
