--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-# MONGODB_URL=mongodb://localhost:27017/todox
-MONGODB_URL=mongodb://192.168.43.155:27017/todox
+MONGODB_URL=mongodb://localhost:27017/todox
+# MONGODB_URL=mongodb://192.168.43.123:27017/todox
+# MONGODB_URL=mongodb://192.168.43.155:27017/todox
 # MONGODB_URL=mongodb://root:LJqLvj6k70mHWDGAsP9QaVsw@todox-db:27017/my-app?authSource=admin
 WEB_SERVICE_USERNAME=u09399963288
 WEB_SERVICE_PASS=Faraz@1419224210440701
