--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGODB_URL=mongodb://localhost:27017/todox
+# MONGODB_URL=mongodb://localhost:27017/todox
 # MONGODB_URL=mongodb://192.168.43.123:27017/todox
 # MONGODB_URL=mongodb://192.168.43.155:27017/todox
-# MONGODB_URL=mongodb://root:LJqLvj6k70mHWDGAsP9QaVsw@todox-db:27017/my-app?authSource=admin
+MONGODB_URL=mongodb://root:0vo1UffBQa3S62cmLrfEn3GT@kazbek.liara.cloud:33815/my-app?authSource=admin
 WEB_SERVICE_USERNAME=u09399963288
 WEB_SERVICE_PASS=Faraz@1419224210440701
 PATTERN_CODE=60gmdfxaxn0t80k
@@ -11,6 +11,6 @@ REFRESH_SECRET_KEY=UIGIGfpi8vGPIipfygVIFPIpFYIGIgiF864D6*@D
 TEMPORARY_SECRET_KEY=YGYIby88yib-ubUBOb-12uhoho9*!Fu-a
 
 LIARA_ENDPOINT=https://storage.c2.liara.space/avatars
-LIARA_BUCKET_NAME=todox
-LIARA_ACCESS_KEY=0p1abhs7009rkl54
-LIARA_SECRET_KEY=1ff2ca85-594f-499c-bf2a-5fb785afde29
+LIARA_BUCKET_NAME=todox-cloud
+LIARA_ACCESS_KEY=l2n3msrdav2r8rvu
+LIARA_SECRET_KEY=17cdb8c5-4790-4fd1-a614-81b3b9739cfe
