--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
