--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-spinners": "^0.14.1",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
+    "swr": "^2.2.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
