--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # MONGODB_URL=mongodb://localhost:27017/todox
-MONGODB_URL=mongodb://root:0vo1UffBQa3S62cmLrfEn3GT@kazbek.liara.cloud:33815/my-app?authSource=admin
+MONGODB_URL_PRIVATE=mongodb://root:0vo1UffBQa3S62cmLrfEn3GT@todox-db:27017/my-app?authSource=admin
+MONGODB_URL_PUBLIC=mongodb://root:0vo1UffBQa3S62cmLrfEn3GT@kazbek.liara.cloud:33684/my-app?authSource=admin
 WEB_SERVICE_USERNAME=u09399963288
 WEB_SERVICE_PASS=Faraz@1419224210440701
 PATTERN_CODE=r4cvhkq2jdeq206
