--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-multi-date-picker": "^4.5.2",
     "react-otp-input": "^3.1.1",
     "react-spinners": "^0.14.1",
+    "react-swipeable": "^7.0.1",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
     "swr": "^2.2.5",
