--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
@@ -29,6 +30,7 @@
     "react-otp-input": "^3.1.1",
     "react-spinners": "^0.14.1",
     "react-swipeable": "^7.0.1",
+    "react-use": "^17.5.1",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
     "swr": "^2.2.5",
