--- a/.env
+++ b/.env
@@ -13,3 +13,9 @@ LIARA_ENDPOINT=https://storage.c2.liara.space/avatars
 LIARA_BUCKET_NAME=todox-cloud
 LIARA_ACCESS_KEY=l2n3msrdav2r8rvu
 LIARA_SECRET_KEY=17cdb8c5-4790-4fd1-a614-81b3b9739cfe
+
+MAIL_HOST=smtp.c1.liara.email
+MAIL_PORT=587
+MAIL_USER=thirsty_chebyshev_gge0hs
+MAIL_PASSWORD=466354c4-f973-40cd-9332-80da0cd44d56
+MAIL_ADDRESS=info@todox.ir
