--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@types/nodemailer": "^6.4.15",
     "aws-sdk": "^2.1682.0",
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-countdown": "^2.3.6",
