--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ PATTERN_CODE=
 LIARA_ACCESS_KEY=
 LIARA_SECRET_KEY=
 LIARA_ENDPOINT=
+LIARA_ENDPOINT_IMAGE=
 LIARA_BUCKET_NAME=
 TEMPORARY_SECRET_KEY=
 ACCESS_SECRET_KEY=
