--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@aws-sdk/s3-request-presigner": "^3.859.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
     "@types/nodemailer": "^6.4.15",
     "aws-sdk": "^2.1682.0",
     "axios": "^1.7.3",
