--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/s3-request-presigner": "^3.859.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@souhaildev/reactemojis": "^1.0.5",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
     "@types/nodemailer": "^6.4.15",
@@ -24,6 +25,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.537.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "nodemailer": "^6.9.15",
@@ -31,6 +33,7 @@
     "react-confetti": "^6.1.0",
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
+    "react-flatpickr": "^4.0.11",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-jwt": "^1.2.2",
