--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "nodemailer": "^6.9.15",
+    "openai": "^5.12.2",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-countdown": "^2.3.6",
