--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.537.0",
     "mongoose": "^8.5.2",
@@ -38,11 +39,15 @@
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-jwt": "^1.2.2",
+    "react-markdown": "^10.1.0",
     "react-multi-date-picker": "^4.5.2",
     "react-otp-input": "^3.1.1",
     "react-spinners": "^0.14.1",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.5.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
     "swr": "^2.2.5",
