--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^11.3.30",
     "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.537.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
@@ -50,7 +51,6 @@
     "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.12.4",
     "sweetalert2-react-content": "^5.0.7",
-    "swr": "^2.2.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
