--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.10",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.4.6",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.4",
     "postcss": "^8",
@@ -71,6 +73,7 @@
     "typescript": "^5"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*": "prettier --write --ignore-unknown",
+    "**/*.{js,jsx,ts,tsx}": "eslint --fix"
   }
 }
